// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row renders a default row 1`] = `
<div
  className="row"
/>
`;

exports[`Row renders a row with boolean props 1`] = `
<div
  className="row collapse"
/>
`;

exports[`Row renders a row with boolean props 2`] = `
<div
  className="row expanded"
/>
`;

exports[`Row renders a row with numeric props 1`] = `
<div
  className="row small-up-1"
/>
`;

exports[`Row renders a row with numeric props 2`] = `
<div
  className="row small-collapse-1"
/>
`;

exports[`Row renders a row with numeric props 3`] = `
<div
  className="row small-uncollapse-1"
/>
`;

exports[`Row renders a row with numeric props 4`] = `
<div
  className="row medium-up-1"
/>
`;

exports[`Row renders a row with numeric props 5`] = `
<div
  className="row medium-collapse-1"
/>
`;

exports[`Row renders a row with numeric props 6`] = `
<div
  className="row medium-uncollapse-1"
/>
`;

exports[`Row renders a row with numeric props 7`] = `
<div
  className="row large-up-1"
/>
`;

exports[`Row renders a row with numeric props 8`] = `
<div
  className="row large-collapse-1"
/>
`;

exports[`Row renders a row with numeric props 9`] = `
<div
  className="row large-uncollapse-1"
/>
`;

exports[`Row renders a row with numeric props 10`] = `
<div
  className="row xlarge-up-1"
/>
`;

exports[`Row renders a row with numeric props 11`] = `
<div
  className="row xlarge-collapse-1"
/>
`;

exports[`Row renders a row with numeric props 12`] = `
<div
  className="row xlarge-uncollapse-1"
/>
`;
